--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ./src/**/*"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.0",
     "@vercel/postgres": "^0.9.0",
     "next": "14.2.6",
+    "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18",
-    "redaxios": "^0.5.1"
+    "redaxios": "^0.5.1",
+    "vercel": "^37.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.5.0",
@@ -26,7 +30,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "prettier": "^3.3.3",
-    "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
