--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "redaxios": "^0.5.1",
     "vercel": "^37.1.2",
+    "zod": "^3.23.8",
     "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
