--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "format": "prettier --write ./src/**/*"
   },
   "dependencies": {
-    "@prisma/client": "^5.19.0",
+    "@prisma/client": "5.19.0",
     "@vercel/postgres": "^0.9.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
     "redaxios": "^0.5.1",
-    "vercel": "^37.1.2",
+    "vercel": "^37.2.0",
     "zod": "^3.23.8",
     "zod-form-data": "^2.0.2"
   },
@@ -32,7 +32,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "prettier": "^3.3.3",
-    "prisma": "^5.19.0",
+    "prisma": "5.19.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
