--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,7 @@
 coverage
 node_modules
 dist
-*.log
-*debug.*
-*error.*
+tsconfig.tsbuildinfo
 
 # ignoring all files that start with a dot.
 .*
@@ -20,6 +18,7 @@ dist
 !.eslint*
 
 # yarn berry
+!.pnp.*
 .yarn/*
 !.yarn/
 !.yarn/patches
@@ -33,4 +32,3 @@ dist
 !.vscode/
 !.vscode/settings.json
 !.vscode/extensions.json
-.vercel
